log
ma., 29 de abr. de 2025 19:37:13: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
ma., 29 de abr. de 2025 19:43:49: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     while (actual = NULL)
     ^~~~~
cc1.exe: all warnings being treated as errors
b381eeb
ma., 29 de abr. de 2025 19:45:51: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
52d1efc
ma., 29 de abr. de 2025 19:47:14: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  11|6
total_score: 15/70
414c573
ma., 29 de abr. de 2025 20:01:59: 
 treemap.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
 tests:  0|0
58d5fe4
ma., 29 de abr. de 2025 20:02:18: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9f72cea
ma., 29 de abr. de 2025 20:04:37: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c1af279
ma., 29 de abr. de 2025 20:05:03: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
482e279
